--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   background-size: cover;
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
+  font-size: larger;
   font-weight: normal;
   font-style: normal;
 }
@@ -13,7 +14,7 @@ body {
   padding: 0px 30px 30px 30px;
   border: 3px solid brown;
   border-radius: 10px 100px / 120px;
-  max-width: 580px;
+  max-width: 600px;
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
   display: inline-block;
 }
@@ -27,10 +28,27 @@ body {
   box-shadow: 12px 12px 2px 1px rgba(0, 0, 0, .2);
 }
 
+/* Legend controls */
 .inp-fullname {
   background-color: cyan;
   border-radius: 10px;
+  font-size: larger;
+  font-style: italic;
+  text-align: center;
 }
+
+.sel-widn {
+  background-color: cyan;
+  border-radius: 10px;
+  font-size: larger;
+}
+
+.button-gen {
+  background-color: cyan;
+  border-radius: 10px;
+  font-size: larger;
+}
+/* /// */
 
 .content {
   padding: 10px 0 0 0;
