--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,8 @@ body {
 /* Lab. 01 */
 .content01-div {
   padding: 10px 0 0 25%;
+  max-height: 650px;
+  overflow-y: auto;
 }
 
 .content01-table { text-align: center; }
