Add Lecture and Task links

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,10 @@ body {
   text-align: left;
 }
 
+.content-span {
+  background-color: LightSalmon;
+}
+
 /* Lab. 01 */
 .content01-div {
   padding: 10px 0 0 25%;
