--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ body {
 }
 
 .content01-button {
-  margin: 0 0 5% 10%;
+  margin: 2% 0 2% 0;
   font-size: large;
   border-radius: 15px;
   border-color: brown;
